--- a/front_end/dashboard.html
+++ b/front_end/dashboard.html
@@ -115,6 +115,8 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+
+    <!-- take data from localstorage and print it -->
     <script>
         $(".title").text(`Welcome ${loggedin_user['username']}`);
         let node = $(".user_info");
