--- a/front_end/login.html
+++ b/front_end/login.html
@@ -83,7 +83,7 @@
     <!-- </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-
+// call api for check user and authorize them.
         $("#login_form").submit(function (event) {
             console.log("submitting");
             event.preventDefault();
