--- a/front_end/register.html
+++ b/front_end/register.html
@@ -106,7 +106,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
-
+// take data from html form and call api for registration of user
     $("#registration_form").submit(function (event) {
 
 
